update chart and options

--- a/tuya.conf
+++ b/tuya.conf
@@ -66,3 +66,17 @@
 # ----------------------------------------------------------------------
 # AUTO-DETECTION JOBS
 # only one of them will run (they have the same name)
+job1:
+    name: "Enchufe 1"
+    device:
+        ip: "x.x.x.x"
+        id: 'ID'
+        localKey: 'LOCALKEY'
+        version: '3.3'
+job2:
+    name: "Enchufe 2"
+    device:
+        ip: "x.x.x.x"
+        id: 'ID'
+        localKey: 'LOCALKEY'
+        version: '3.3'
